# fyuse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_USAGE_EXAMPLES.md  Cargo.toml  Dioxus.toml  Dockerfile  MASTER_PROMPT.md  RELEASE_NOTES.md  SPEC_VALIDATION_REPORT.md  batch_processing_test.md  config.example.toml  config.toml  config.toml.example  config.yaml.example
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: placeholder.rs
docs/: API_REFERENCE.md  CLI_USAGE_EXAMPLES.md  COMPETITIVE_GAP_ANALYSIS.md  CONFIG_README.md  FEATURE_MATRIX.md  GAP_ANALYSIS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_FEATURES.md  PROGRESS_SUMMARY.md  README.md  REMAINING_TASKS_IMPLEMENTATION.md  REQUIREMENTS_VALIDATION.md  RESOURCE_MANAGEMENT.md  SECURITY.md  SECURITY_COMPLETE.md  SECURITY_IMPLEMENTATION.md  SECURITY_QUICK_REFERENCE.md  SECURITY_SETUP.md  TASK_1_VERIFICATION.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TEST_DOCUMENTATION.md  TEST_STRATEGY.md  gap-analysis.md  mcp_server.py  openapi.yaml
docs/ai-model-management-platform/: REPORT_FORMAT_UPDATE.md  design.md  requirements.md  tasks.md
docs/directory-management/: design.md  requirements.md  tasks.md
docs/feature-requirements/: 01-competitor-analysis.md  02-feature-requirements.md  03-architecture-improvements.md  04-security-owasp.md  05-kubernetes-scalability.md  06-api-documentation.md  07-test-cases.md  08-model-security-audit.md  09-ai-shield-gateway.md  10-feasibility-analysis.md  11-product-requirements.md  12-architecture-design.md  13-implementation-roadmap.md  14-PRD-v2-complete.md  15-dev-strategy.md  16-tdd-strategy.md  17-autopilot-tasks.md  18-agent-harness-design.md  README.md
k8s/: configmap.yaml  deploy.sh  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
k8s/cilium/: hubble-config.yaml  network-policy.yaml
k8s/envoy/: gateway.yaml
k8s/observability/: grafana.yaml  loki.yaml  opentelemetry-collector.yaml  prometheus.yaml
scripts/: check_config_credentials.py  check_file_permissions.py  check_sensitive_patterns.py  check_todos.py  setup_hooks.sh  validate_config.py
src/: error.rs  lib.rs  logging.rs  main.rs  pool.rs  queue.rs  system.rs  test_helpers.rs
src/agents/: bash_validator.rs  branch_awareness.rs  diagnostics.rs  failure.rs  lane.rs  mcp.rs  mod.rs  permissions.rs  session.rs  swarm.rs  task_packet.rs  traits.rs  worker.rs
src/api/: mod.rs  server.rs
src/api/routes/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/channels/: discord.rs  matrix.rs  mod.rs  router.rs  session.rs  slack.rs  telegram.rs  traits.rs  web_widget.rs
src/cli/: commands.rs  mod.rs  progress.rs  slash_commands.rs  validation.rs
src/cli/handlers/: config.rs  features.rs  init.rs  merge_models.rs  mod.rs  model.rs  queue.rs  rag.rs  serve.rs
src/compatibility/: mod.rs
src/config/: directory.rs  feature_flags.rs  mod.rs
src/devices/: automation.rs  correlator.rs  home_assistant.rs  mod.rs  mqtt.rs  oura.rs  traits.rs
src/fleet/: mod.rs
src/inference/: ab_testing.rs  backend.rs  cache.rs  coordinator.rs  grammar.rs  mod.rs  prompt_optimizer.rs  sampler.rs  streaming.rs  tokenizer.rs  wasm_runtime.rs
src/inference/cpu/: engine.rs  kv_cache.rs  mod.rs
src/inference/gpu/: cuda.rs  metal.rs  mod.rs
src/k8s/: mod.rs  operator.rs
src/layer/: inspector.rs  manipulator.rs  mod.rs  report.rs  validator.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/model/: delta.rs  format_selector.rs  huggingface.rs  inference.rs  lifecycle.rs  local_engine.rs  manager.rs  merging.rs  metadata.rs  mod.rs  modelscope.rs  proxy.rs  recommender.rs  remote.rs  resource_manager.rs  source.rs  unsloth.rs
src/model/formats/: gguf.rs  mmap_loader.rs  mod.rs
src/model/registry/: huggingface.rs  mod.rs  ollama.rs
src/observability/: metrics.rs  mod.rs
src/platform/: hardware.rs  mod.rs  simd.rs
src/plugins/: mod.rs  traits.rs
src/quantization/: compatibility.rs  gguf_codec.rs  methods.rs  mod.rs  optimizer.rs  quantizer.rs  traits.rs  validator.rs
src/rag/: embeddings.rs  indexer.rs  memory.rs  mod.rs  retriever.rs
src/scanner/: mod.rs  report.rs  trivy.rs
src/security/: ai_shield.rs  audit.rs  mod.rs  rbac.rs
src/server/: handlers.rs  middleware.rs  mod.rs
src/storage/: database.rs  download.rs  mod.rs  repository.rs  traits.rs
src/tui/: app.rs  chat.rs  mod.rs  render.rs  theme.rs  widgets.rs
src/ui/: app.rs  mod.rs  state.rs  utils.rs
src/ui/components/: chat_window.rs  export_dialog.rs  file_upload.rs  input_area.rs  mod.rs  model_selector.rs
src/ui_dioxus/: app.rs  mod.rs
src/ui_dioxus/components/: message_bubble.rs  mod.rs  model_card.rs  nav_sidebar.rs  status_badge.rs
src/ui_dioxus/pages/: channels.rs  chat.rs  dashboard.rs  mod.rs  models.rs
src/workflow/: compile_fix_test.rs  discovery.rs  executor.rs  history.rs  mod.rs  parser.rs  state.rs  vibe_logger.rs
tests/: edge_build.rs  feature_gates.rs  integration.rs
tests/api/: mod.rs
