[package]
name = "fuse"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "The world's most powerful open-source AI system manager"
license = "Apache-2.0"

# ─────────────────────────────────────────────
# Core dependencies (always available)
# ─────────────────────────────────────────────

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web server (core uses axum)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
redb = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing (core)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
dirs = "5.0"
serde_yaml = "0.9"
base64 = "0.22"
async-trait = "0.1"
sysinfo = "0.37.2"
rand = "0.9.2"
fastrand = "2.3.0"
futures-util = { version = "0.3", features = ["io"] }
futures = "0.3"
async-stream = "0.3"
memmap2 = "0.9"
dashmap = "6"
rayon = "1.10"
bytes = "1"

# ─────────────────────────────────────────────
# Optional dependencies (feature-gated)
# ─────────────────────────────────────────────

# OpenTelemetry (observability feature)
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics", "grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry-semantic-conventions = { version = "0.13", optional = true }

# Inference (candle)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", features = ["http"], optional = true }

# UI - Dioxus
dioxus = { version = "0.6", optional = true }

# UI - Legacy Yew (deprecated, to be removed in 0.3)
yew = { version = "0.21", features = ["csr"], optional = true }
yew-router = { version = "0.18", optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Location", "History", "Document",
    "Element", "HtmlElement", "DomRect", "MediaQueryList",
    "Event", "MouseEvent", "KeyboardEvent", "EventTarget",
    "Node", "HtmlInputElement", "InputEvent", "FocusEvent",
], optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-storage = { version = "0.3", optional = true }
gloo-net = { version = "0.6", features = ["http"], optional = true }

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
unicode-width = "0.2"

# Channels
teloxide = { version = "0.13", optional = true }
serenity = { version = "0.12", optional = true }
matrix-sdk = { version = "0.7", optional = true }

# Devices
rumqttc = { version = "0.24", optional = true }

# GPU
cudarc = { version = "0.12", optional = true }

# WASM runtime
wasmtime = { version = "27", optional = true }

# Kubernetes
kube = { version = "0.97", optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }

# ─────────────────────────────────────────────
# Feature flags
# ─────────────────────────────────────────────

[features]
default = ["cli", "api-server", "cpu-inference"]

# ── Inference ──
cpu-inference = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
continuous-batching = ["cpu-inference"]
paged-attention = ["cpu-inference"]
speculative-decoding = ["cpu-inference"]

# ── GPU (compile-time) ──
cuda = ["cpu-inference", "dep:cudarc"]
metal = ["cpu-inference"]
vulkan = []

# ── Quantization ──
gguf = []
turboquant = ["gguf"]
awq = ["gguf"]
gptq = ["gguf"]

# ── API ──
api-server = []
ollama-compat = ["api-server"]
openai-compat = ["api-server"]
anthropic-compat = ["api-server"]

# ── CLI ──
cli = []
tui = ["dep:ratatui", "dep:crossterm"]

# ── Channels ──
channels = ["api-server"]
telegram = ["channels", "dep:teloxide"]
discord = ["channels", "dep:serenity"]
slack = ["channels"]
matrix = ["channels", "dep:matrix-sdk"]

# ── Devices ──
device-hub = []
oura = ["device-hub"]
apple-health = ["device-hub"]
home-assistant = ["device-hub"]
mqtt-devices = ["device-hub", "dep:rumqttc"]

# ── UI ──
dioxus-ui = ["dep:dioxus"]
yew-ui = [
    "dep:yew", "dep:yew-router", "dep:web-sys",
    "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:gloo-timers", "dep:gloo-storage", "dep:gloo-net",
]

# ── RAG ──
rag = []

# ── Agents ──
agents = ["api-server"]
mcp = ["agents"]

# ── Production ──
kubernetes = ["dep:kube", "dep:k8s-openapi"]
observability = [
    "dep:tracing-opentelemetry", "dep:opentelemetry",
    "dep:opentelemetry-otlp", "dep:opentelemetry_sdk",
    "dep:opentelemetry-semantic-conventions",
]
ai-shield = ["api-server"]

# ── Edge ──
edge = ["cli"]
wasm-runtime = ["dep:wasmtime"]

# ─────────────────────────────────────────────
# Dev dependencies
# ─────────────────────────────────────────────

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
wiremock = "0.6"

[[bench]]
name = "placeholder"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.edge]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
